--- a/travel2019/index.html
+++ b/travel2019/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2019美西旅遊日記</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/e798cd3ad0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <nav>
-                <a href="javascript:;"><div id="logo"></div></a>
-            <div>
+        <nav class="">
+                <a id="menubtn" href="javascript:;"></a>
+                <a id="logo" href="javascript:;"></a>
+             <div>
                 <a href="javascript:;">Day1-2</a>
                 <a href="javascript:;">Day3-5</a>
                 <a href="javascript:;">Day6-8</a>
@@ -26,7 +29,8 @@
     </header>
     <article>
         <div>
-            <h1>美西自由行│</h1>
+            <h1>美西自由行</h1>
+            <h1 class="title">│</h1>
             <p>17天自駕行程大公開</p>
         </div>
     </article>
@@ -98,12 +102,12 @@
     </aside>
     <footer>
         <div>
-            <div class="icon">
-                <a id="FB" href="javascript:;"><i class="fab fa-facebook-square fa-2x"></i></a>
-                <a id="LINE" href="javascript:;"><i class="fab fa-line fa-2x"></i></a>
-            </div>
+            <a id="FB" href="javascript:;"><i class="fab fa-facebook-square fa-2x"></i></a>
+            <a id="LINE" href="javascript:;"><i class="fab fa-line fa-2x"></i></a>
             
             <p>Copyright © 2019 JojoChou 版權所有</p>
+            
+        </div>    
     </footer>
 </body>
 </html>
