--- a/travel2019/index.html
+++ b/travel2019/index.html
@@ -102,8 +102,8 @@
     </aside>
     <footer>
         <div>
-            <a id="FB" href="javascript:;"><i class="fab fa-facebook-square fa-2x"></i></a>
-            <a id="LINE" href="javascript:;"><i class="fab fa-line fa-2x"></i></a>
+            <a id="FB" href="javascript:;"><i class="fab fa-facebook-square"></i></a>
+            <a id="LINE" href="javascript:;"><i class="fab fa-line"></i></a>
             
             <p>Copyright © 2019 JojoChou 版權所有</p>
             
