--- a/travel2019/index.html
+++ b/travel2019/index.html
@@ -14,17 +14,17 @@
     <header>
         <nav class="">
                 <a id="menubtn" href="javascript:;"></a>
-                <a id="logo" href="javascript:;"></a>
-             <div>
-                <a href="javascript:;">Day1-2</a>
-                <a href="javascript:;">Day3-5</a>
-                <a href="javascript:;">Day6-8</a>
-                <a href="javascript:;">Day9-10</a>
-                <a href="javascript:;">Day11-14</a>
-                <a href="javascript:;">Day15-17</a>
-                <a href="javascript:;">地圖</a>
-                <a href="javascript:;">行程表</a>
-            </div>
+                <a id="logo" href="../travel2019/index.html"></a>
+                <div>
+                    <a href="../travel2019/dairy01.html">Day1-2</a>
+                    <a href="../travel2019/dairy02.html">Day3-5</a>
+                    <a href="../travel2019/dairy03.html">Day6-8</a>
+                    <a href="../travel2019/dairy04.html">Day9-10</a>
+                    <a href="../travel2019/dairy05.html">Day11-14</a>
+                    <a href="../travel2019/dairy06.html">Day15-17</a>
+                    <a href="https://www.google.com/maps/d/u/0/viewer?mid=1x_zhEj6XvwSO1Fe9In9pYrzVc7LCKxml&ll=40.05370556006346%2C-114.24716000000001&z=6">地圖</a>
+                    <a href="https://docs.google.com/spreadsheets/d/1gabI_GZMkNLrQ094T_kMzsTQmg93yHEajQ-FwW-6ktM/edit?usp=sharing">行程表</a>
+                </div>
         </nav>
     </header>
     <article>
@@ -46,7 +46,7 @@
     <main>
         <div>
             <div class="day1">
-                <a href="javascript:;">
+                <a href="../travel2019/dairy01.html">
                         <div class="top">
                         <p>Day1~2</p>
                         <p>啟程前往洛杉磯</p>
@@ -54,7 +54,7 @@
                 </a>
             </div>
             <div class="day2">
-                <a href="javascript:;">
+                <a href="../travel2019/dairy02.html">
                     <div class="bottom">
                         <p>Day3~5</p>
                         <p>黃石公園繞一圈</p>
@@ -62,7 +62,7 @@
                 </a>
             </div>
             <div class="day3">
-                <a href="javascript:;">
+                <a href="../travel2019/dairy03.html">
                     <div class="top">
                         <p>Day6~8</p>
                         <p>好山好水好星空-大堤頓</p>
@@ -70,7 +70,7 @@
                 </a>
             </div>
             <div class="day4">
-                <a href="javascript:;">
+                <a href="../travel2019/dairy04.html">
                     <div class="top">
                         <p>Day9~10</p>
                         <p>開車好累的大峽谷+羚羊谷</p>
@@ -78,7 +78,7 @@
                 </a>
             </div>
             <div class="day5">
-                <a href="javascript:;">
+                <a href="../travel2019/dairy05.html">
                     <div class="bottom">
                         <p>Day11~14</p>
                         <p>最後的國家公園</p>
@@ -86,7 +86,7 @@
                 </a>
             </div>
             <div class="day6">
-                <a href="javascript:;">
+                <a href="../travel2019/dairy06.html">
                     <div class="top">
                         <p>Day15~17</p>
                         <p>遊樂園一次玩透透</p>
